[package]
name = "ghg-data-core"
version = "0.1.0"
authors = ["asaaj <jacob.rice.systems@gmail.com>"]
edition = "2021"
repository = "https://github.com/asaaj/ghg"
license-file = "LICENSE_MIT"

[lib]
name = "ghg_data_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
nalgebra-glm = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
