[package]
name = "ghg-data-processing"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "debug_cdf_file"
required-features = [
    "read_netcdf",
]

[[bin]]
name = "export_shapefile"
required-features = [
    "read_shapefile",
]

[[bin]]
name = "merra2_inst_2d_data_export"
required-features = [
    "read_netcdf",
]

[[bin]]
name = "web_downloader"
required-features = [
    "scrape_web",
]

[features]
read_shapefile = ["geo", "geo-rasterize", "shapefile"]
read_netcdf = ["hdf5-sys", "netcdf-src", "netcdf"] # Requires HDF5 to be installed, or build with `--features hdf5-sys/static,netcdf-src/static`
scrape_web = ["scraper", "reqwest", "regex"]

[dependencies]
ghg-common = { path = "../ghg-common", version = "0.1.0" }
ghg-data-core = { path = "../ghg-data-core", version = "0.1.0" }
euclid = "0.22.9"
itertools = "0.10.3"
ndarray = "0.15.6"
serde = "1.0"
serde_json = "1.0"
image = "0.24.2"
rayon = "1.7.0"

geo = { version = "0.25.0", optional = true }
geo-rasterize = { version = "0.1.2", optional = true }
shapefile = { version = "0.4.0", features = ["geo-types"], optional = true }

hdf5-sys = { version = "0.8.1", optional = true }
netcdf-src = { version = "0.3.0", optional = true }
netcdf = { version = "0.8.1", optional = true }

scraper = { version = "0.16.0", optional = true}
reqwest = { version = "0.11", optional = true, features = ["blocking"] }
regex = { version = "1", optional = true }
